# http_server

./: Cargo.toml  README.md
blog/: part_0.md  part_1.md
src/: args.rs  client.rs  handler.rs  main.rs  req.rs  resp.rs
static/: 404.html  about.html  index.html
