[package]
name = "http_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
futures = "0.3.28"
maplit = "1.0.2"
tokio = { version = "1.28.0", features = ["full"] }
tokio-util = "0.7.8"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dev-dependencies]
indoc = "2.0.1"
maplit = "1.0.2"
